Made app slightly more mobile friendly with pi in mind. Navbar works better on that format. Corrected bug with it not opening. Changed spacing a bit

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -21,6 +21,14 @@ textarea {
     resize: none;
 }
 
+.navbar-default .navbar-toggle{
+    color: #F3FFBD !important;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+    background-color: #247BA0 !important;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -51,11 +59,11 @@ textarea {
 }
 
 .default-top-spacer{
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 .small-top-spacer{
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .min-top-spacer{
@@ -205,7 +213,7 @@ body {
 }
 
 .highlight{
-    background-color: #fd0;
+    background-color: #f3ffbd;
 }
 
 .table-hover>tbody>tr:hover{
